# simple_detailed_error

./: Cargo.toml  README.md  color.txt
src/: formatting.rs  lib.rs  main.rs  simple_error.rs  simple_error_detail.rs  simple_error_display_info.rs  simple_error_explanation.rs
