[package]
name = "borrame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"

syn = { version = "2.0.65", default-features = false, features = ["parsing", "full", "extra-traits", "visit"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_with = "3.8.1"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
bincode = "1.3.3"
once_cell = "1.19.0"
regex = "1.10.4"
rhai = {path = "rhai", features = ["internals"]}
itertools = "0.12.1"
rustc-hash = { version = "1.1.0" }
paste = "1.0.14"
derive_constructors = { version = "1.0.0" }
num-traits = "0.2.18"
yaml-rust = "0.4.5"


hashbrown = "0.14.5"
log = "0.4.21"

[profile.dev]
incremental = true
panic = "abort"
debug = 2
opt-level = 0
lto = "off"
codegen-units = 256

[profile.release]
incremental = false
panic = "abort"
debug = false
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
